complete style v1, need few more changes

--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@
         </div>
     </section>
     <footer >
+        <div class="footer-top-line"></div>
         <div class="container">
             <div class="grid-footer">
                 <div>
@@ -370,19 +371,21 @@
                         <div class="footer-links-item-4"><a href="#">Login / Register</a></div>
                     </div>
                 </div>
+                <div class="footer-line-1"></div>
                 <div>
                     <div class="footer-item-2">
                         <h2 class="footer-title2">DEV TEST</h2>
-                        <p class="footer-text2">Dev Test</p>
-                        <p class="footer-text2">1421 38th Brooklyn, NY</p>
-                        <p class="footer-text2">11245-5647 USA</p>
+                        <p class="footer-text2-1">Dev Test</p>
+                        <p class="footer-text2-2">1421 <span>38 <span class="th">th </span></span> Brooklyn, NY</p>
+                        <p class="footer-text2-3">11245-5647 USA</p>
                     </div>
                 </div>
+                <div class="footer-line-2"></div>
                 <div>
-                    <div>
+                    <div class="footer-item-3">
                         <h2>NEWSLETTER</h2>
                         <div>
-                            <button><i class="far fa-envelope"></i> EMAIL ADDRESS</button>
+                            <div class="footer-button"><img src="./images/envelope.png" alt=""> <span>EMAIL ADDRESS</span> <img class="footer-right-arrow" src="./images/arrow-right1.png" alt=""></div>
                         </div>
                     </div>
                 </div>
@@ -390,18 +393,12 @@
         </div>
 
         <div class="copyrights">
-            <i class="far fa-copyright"></i> DEVTEST - 2019 All Right Reserved.
+            <i class="far fa-copyright fa-xs"></i> DEVTEST -- 2019 All Right Reserved.
         </div>
 
         
         
     </footer>
-    <h1>sdklfjsdkl</h1>
-    <h1>sdklfjsdkl</h1>
-    <h1>sdklfjsdkl</h1>
-    <h1>sdklfjsdkl</h1>
-    <h1>sdklfjsdkl</h1>
-    <h1>sdklfjsdkl</h1>
     <script src="./js/index.js"></script>
 </body>
 </html>
