--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="nav-item-2"><a href="#">BROWSE PRODUCTS</a></div>
                 <div class="nav-item-3"><a href="#">Company info <i class="fas fa-chevron-down fa-xs"></i></a></div>
-                <div class="nav-item-4"><a class="nav-cart-icon" href="#"><i class="fas fa-shopping-cart" onclick="showSidebar()"></i><span id="cart-items-number">0</span></a>
+                <div class="nav-item-4"><button class="nav-cart-icon" ><i class="fas fa-shopping-cart" onclick="showSidebar()"></i><span id="cart-items-number">0</span></button>
                     <div id="cart-items-list">
                         <div class="cart-grid">
                             <div class="edge">&#9670;</div>
