--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
     <nav class="navbar">
         <div class="container">
-            <div class="flex-container">
+            <button class="dropdown-btn" onclick="toggleDropdown()"><i class="fas fa-bars"></i></button>
+            <div class="flex-container " id="dropdown-manu">
                 <div class="logo">
                     <a class="text-logo" href="#">IPSUMS</a>
                     <a class="sub-text-logo" href="#">DEV TEST TASK</a>
@@ -243,7 +244,7 @@
                                 
                                 <div><button class="add-to-cart-button ">ADD<i class="fas fa-shopping-cart"></i></button></div>
                             </td>
-                            <td><i class="fas fa-chevron-up"></i></td>
+                            <td><i class="fas fa-chevron-down"></i></td>
                         </tr>
                         <tr id="ei2" style="display: none;">
                             <td  colspan="9" >
